traces/bug_430.txt
src/femlib/BamgFreeFem.cpp:749: error: DEAD_STORE
  The value written to &iold (type int) is never used.
Showing all 1 steps of the trace


src/femlib/BamgFreeFem.cpp:749:6: Write of unused value
747.   		      if(on->abscisse <0) {
748.   			  bamg::GeometricalVertex * gv= on->gv;
749.   			  int iold = Gh->Number(gv);
            ^
750.   		      }
751.   		      else {// erreur car un point est sur un arete en non un sommet
